--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,4 @@
-/*
-  Strict-Transport-Security: max-age=31536000; includeSubDomains; preload
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Strict-Transport-Security = "max-age=63072000; includeSubDomains; preload"
