--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "gatsby-plugin-nprogress": "^2.0.8",
     "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-react-helmet": "^3.0.6",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "^2.0.22",
-    "gatsby-plugin-sitemap": "^2.0.6",
+    "gatsby-plugin-sitemap": "^2.2.6",
     "gatsby-plugin-styled-components": "^3.0.6",
     "gatsby-plugin-typescript": "^2.0.9",
     "gatsby-remark-copy-linked-files": "^2.0.9",
