--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "Gaetano Barreca Portfolio",
   "version": "0.1.0",
   "author": "Gaetano Barreca",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "@types/node": "^11.9.5",
     "@types/react": "^16.8.4",
